# Verilog-Quiz-System

./: .gitignore  AGENTS.md  DEV_PROGRESS.md  Manual for EIE330 Students.md  README.md  config.py  debug_check.py  encrypt_refs.py  fix_draw_result.py  fix_server_encoding.py  main.py  pyproject.toml  setup_local_data.py  setup_test_server.py
.github/workflows/: build-dev.yml  build-release.yml
core/: code_executor.py  crypto_manager.py  question_manager.py  report_generator.py  result_analyzer.py
test_server/verilog-quiz/: manifest.json
test_server/verilog-quiz/week1/: info.json
test_server/verilog-quiz/week1/q1/: question.md  reference.v  testbench.v
test_server/verilog-quiz/week1/q2/: question.md  reference.v  testbench.v
test_server/verilog-quiz/week1/q3/: question.md  reference.v  testbench.v
test_server/verilog-quiz/week2/: info.json
test_server/verilog-quiz/week2/q1/: question.md
ui/: app.py  question_view.py  week_selector.py
